--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             :root {
                 --primary: #00bcd4;
                 --primary-dark: #0097a7;
-                --secondary: #ff5722;
+                --secondary: #ff22a5;
                 --dark: #121212;
                 --darker: #0a0a0a;
                 --light-dark: #1e1e1e;
