--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 --text: #fff;
                 --text-secondary: #ccc;
                 --text-muted: #777;
-                --error: #f44336;
+                --error: #ff22a5;
                 --success: #4caf50;
                 --spinner-color: var(--primary);
             }
