--- a/index.html
+++ b/index.html
@@ -1320,6 +1320,9 @@
                                     <option value="gemini-2.0-flash-thinking-exp-01-21">
                                         Gemini Flash 2.0 (Fast, Default)
                                     </option>
+                                    <option value="gemini-2.5-flash-preview-04-17">
+                                        Gemini Flash 2.5 (Fast, Good)
+                                    </option>
                                     <option value="gemini-2.5-pro-exp-03-25">
                                         Gemini Pro 2.5 (Slower, More Capable)
                                     </option>
