--- a/index.html
+++ b/index.html
@@ -1330,7 +1330,8 @@
                                         Claude 4 Sonnet
                                     </option>
                                     <option value="deepseek-reasoner">DeepSeek Reasoner</option>
-                                    <option value="o4-mini">O4 Mini</option>
+                                    <option value="o4-mini">o4 Mini</option>
+                                    <option value="gpt-5-mini">GPT-5-mini</option>
                                 </select>
                                 <p id="model-help" class="form-help">
                                     Choose the AI model for the iterative process. Your selection
